--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^17.0.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "mongoose": "^8.16.1"
+    "method-override": "^3.0.0",
+    "mongoose": "^8.16.1",
+    "morgan": "^1.10.0"
   }
 }
